added Images folder
added images folder and 2 images, 1 for the create employee page.

and one for future to be used on the login page.

main page has a link to a logo image which currently does not exist

--- a/Views/Employee/CreateEmployee.cshtml
+++ b/Views/Employee/CreateEmployee.cshtml
@@ -11,8 +11,8 @@
 
         <div class="page-header">
             <br>
-            <img src="images/register.png" class="mx-auto d-block">
-            <h1 class="text-center mt-4">Create Employee page</h1>
+            <img src="~/images/register.png" class="mx-auto d-block">
+            <h1 class="text-center mt-4 mb-4">Create Employee page</h1>
         </div>
 
         <!-- Form -->
