--- a/Views/Employee/ManageEmployee.cshtml
+++ b/Views/Employee/ManageEmployee.cshtml
@@ -2,12 +2,10 @@
 
 <div class="container">
     <div class="row">
-        <div class="text-primary col-6">
-            <h1>Employee List</h1>
+        <div class="text-primary col-6 mt-4">
+            <h1>Manage Employees</h1>
         </div>
-        <div class="col-6">
-            Manage Employee
-        </div>
+
     </div>
 
     <hr />
