Removed Portal and added it to Home
Portal was redundant and was essentially a copy of Home, moved portal content into home controller and view

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a asp-controller="Portal" asp-action="Index"><img src="~/images/logo.jpg" style="max-width: 50px;"></a>
+            <a asp-controller="Home" asp-action="Navigation"><img src="~/images/logo.jpg" style="max-width: 50px;"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -22,7 +22,7 @@
                 <ul class="navbar-nav mr-auto">
 
                     <li class="nav-item active">
-                        <a class="nav-link" asp-controller="Portal" asp-action="Index">Navigation <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" asp-controller="Home" asp-action="Navigation">Navigation <span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item dropdown active">
