Added form for creating movie
Added form and functionality to creating a movie

Removed some indentation on createEmployee page.

--- a/Views/Home/Navigation.cshtml
+++ b/Views/Home/Navigation.cshtml
@@ -10,6 +10,18 @@
     </div>
 
     <div class="container mt-5 mb-5">
+
+        <!-- Manager Access Required -->
+        <div class="row">
+            <div class="col-md-6 mt-5">
+                <a class="btn btn-outline-info btn-block" asp-controller="Movie" asp-action="CreateMovie">Create Movie</a>
+            </div>
+
+            <div class="col-md-6 mt-5">
+                <a class="btn btn-outline-info btn-block" asp-controller="Movie" asp-action="ManageMovie">Manage Movie</a>
+            </div>
+        </div>
+
         <!-- Manager Access Required -->
         <div class="row">
             <div class="col-md-6 mt-5">
