--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,9 +35,12 @@
 
                             <a class="dropdown-item" asp-controller="" asp-action="">Login</a>
                             <div class="dropdown-divider"></div>
+                            <a class='dropdown-item' asp-controller="Movie" asp-action="CreateMovie">Create New Movie</a>
+                            <a class='dropdown-item' asp-controller="Movie" asp-action="ManageMovie">Manage Movies</a>
+                            <div class="dropdown-divider"></div>
                             <a class='dropdown-item' asp-controller="Employee" asp-action="CreateEmployee">Create New Employee</a>
                             <a class='dropdown-item' asp-controller="Employee" asp-action="ManageEmployee">Manage Employees</a>
-                            
+
                         </div>
                     </li>
                 </ul>
@@ -58,6 +61,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
