Update employee change
redirect user back to manage page after updating, changed a title for update page.

--- a/Views/Employee/UpdateEmployee.cshtml
+++ b/Views/Employee/UpdateEmployee.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "UpdateEmployee";
 }
 
-<title>Create Employee</title>
+<title>Update Employee</title>
 
 <!-- Container for the Form -->
 <div class="container">
