--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,39 +12,45 @@
     <header>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a asp-controller="Home" asp-action="Navigation"><img src="~/images/logo.jpg" style="max-width: 50px;"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            @if (Program.LoggedIn)
+            {
+                <a asp-controller="Home" asp-action="Navigation"><img src="~/images/logo.jpg" style="max-width: 50px;"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav mr-auto">
 
-                    <li class="nav-item active">
-                        <a class="nav-link" asp-controller="Home" asp-action="Navigation">Navigation <span class="sr-only">(current)</span></a>
-                    </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" asp-controller="Home" asp-action="Navigation">Navigation <span class="sr-only">(current)</span></a>
+                        </li>
 
-                    <li class="nav-item dropdown active">
+                        <li class="nav-item dropdown active">
 
 
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
-                        
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
 
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                            <a class="dropdown-item" asp-controller="" asp-action="">Login</a>
-                            <div class="dropdown-divider"></div>
-                            <a class='dropdown-item' asp-controller="Movie" asp-action="CreateMovie">Create New Movie</a>
-                            <a class='dropdown-item' asp-controller="Movie" asp-action="ManageMovie">Manage Movies</a>
-                            <div class="dropdown-divider"></div>
-                            <a class='dropdown-item' asp-controller="Employee" asp-action="CreateEmployee">Create New Employee</a>
-                            <a class='dropdown-item' asp-controller="Employee" asp-action="ManageEmployee">Manage Employees</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        </div>
-                    </li>
-                </ul>
-            </div>
+                                <a class="dropdown-item" asp-controller="" asp-action="">Login</a>
+                                <div class="dropdown-divider"></div>
+                                <a class='dropdown-item' asp-controller="Movie" asp-action="CreateMovie">Create New Movie</a>
+                                <a class='dropdown-item' asp-controller="Movie" asp-action="ManageMovie">Manage Movies</a>
+                                <div class="dropdown-divider"></div>
+                                <a class='dropdown-item' asp-controller="Employee" asp-action="CreateEmployee">Create New Employee</a>
+                                <a class='dropdown-item' asp-controller="Employee" asp-action="ManageEmployee">Manage Employees</a>
+                                <div class="dropdown-divider"></div>
+                                <a class='dropdown-item' asp-controller="Home" asp-action="Logout">Logout</a>
+
+                            </div>
+
+                        </li>
+                    </ul>
+                </div>
+            }
         </nav>
     </header>
     <div class="container">
