--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                                 <a class='dropdown-item' asp-controller="Employee" asp-action="CreateEmployee">Create New Employee</a>
                                 <a class='dropdown-item' asp-controller="Employee" asp-action="ManageEmployee">Manage Employees</a>
                                 <div class="dropdown-divider"></div>
+                                <a class='dropdown-item' asp-controller="Customer" asp-action="CreateCustomer">Create New Customer</a>
+                                <a class='dropdown-item' asp-controller="Customer" asp-action="ManageCustomer">Manage Customers</a>
+                                <div class="dropdown-divider"></div>
                                 <a class='dropdown-item' asp-controller="Home" asp-action="Logout">Logout</a>
 
                             </div>
