--- a/Views/Employee/UpdateEmployee.cshtml
+++ b/Views/Employee/UpdateEmployee.cshtml
@@ -95,7 +95,7 @@
 
 
 
-        <button class="form-control" type="submit" value="CreateEmployee">Update Employee</button>
+        <button class="form-control" type="submit" value="UpdateEmployee">Update Employee</button>
     </form>
     <!-- End Form -->
 
