Added Customer button to navigation View
Added customer buttons to navigation view

--- a/Views/Home/Navigation.cshtml
+++ b/Views/Home/Navigation.cshtml
@@ -33,5 +33,17 @@
             </div>
         </div>
 
+        <div class='row'>
+            <!-- Employee Access Required -->
+            <div class='col-md-6 mt-5'>
+                <a class='btn btn-outline-info btn-block' asp-controller="Customer" asp-action="CreateCustomer">Create Customers</a>
+            </div>
+
+            <!-- Employee Access Required -->
+            <div class='col-md-6 mt-5'>
+                <a class='btn btn-outline-info btn-block' asp-controller="Customer" asp-action="ManageCustomer">Manage Customers</a>
+            </div>
+        </div>
+
     </div>
 </body>
